# decode

./: .gitmodules  CMakeLists.txt  decode.xml  dummy.cpp  example.decode  invalid.decode  meson.build  onboard.decode  test.decode
onboard/: core.decode  tm.decode
src/decode/: Config.h  Grammar.h  Main.cpp  Parser.cpp  Parser.h  Rc.h  meson.build
src/decode/ast/: AllBuiltinTypes.h  Ast.cpp  Ast.h  AstVisitor.h  Component.cpp  Component.h  Constant.h  Decl.cpp  Decl.h  DocBlock.cpp  DocBlock.h  DocBlockMixin.cpp  DocBlockMixin.h  Field.cpp  Field.h  Function.cpp  Function.h  ModuleInfo.h  Type.cpp  Type.h  Utils.h
src/decode/core/: CfgOption.cpp  CfgOption.h  Configuration.cpp  Configuration.h  DataReader.h  Diagnostics.cpp  Diagnostics.h  EncodedSizes.cpp  EncodedSizes.h  FileInfo.h  Foreach.h  Hash.h  Id.h  Iterator.h  Location.h  Lock.h  NamedRc.h  PathUtils.cpp  PathUtils.h  ProgressPrinter.cpp  ProgressPrinter.h  RangeAttr.h  Rc.h  StringBuilder.cpp  StringBuilder.h  StringErrorMixin.h  StringSwitch.h  Target.h  Try.h  Utils.cpp  Utils.h  Zpaq.cpp  Zpaq.h
src/decode/generator/: CmdDecoderGen.cpp  CmdDecoderGen.h  CmdEncoderGen.cpp  CmdEncoderGen.h  DynArrayCollector.cpp  FuncPrototypeGen.cpp  FuncPrototypeGen.h  GcInlineTypeSerializerGen.h  GcInterfaceGen.cpp  GcInterfaceGen.h  GcMsgGen.cpp  GcMsgGen.h  GcStatusMsgGen.cpp  GcStatusMsgGen.h  GcTypeGen.cpp  GcTypeGen.h  Generator.cpp  Generator.h  HeaderGen.cpp  HeaderGen.h  IncludeCollector.cpp  IncludeCollector.h  IncludeGen.cpp  IncludeGen.h  InlineFieldInspector.h  InlineSerContext.h  InlineTypeDeserializerGen.cpp  InlineTypeDeserializerGen.h  InlineTypeInspector.cpp  InlineTypeInspector.h  InlineTypeSerializerGen.cpp  InlineTypeSerializerGen.h  NameVisitor.h  OnboardInlineTypeInspector.h  OnboardTypeHeaderGen.cpp  OnboardTypeHeaderGen.h  OnboardTypeSourceGen.cpp  OnboardTypeSourceGen.h  SerializationFuncPrototypeGen.h  SliceCollector.cpp  (+26 more)
src/decode/groundcontrol/: AllowUnsafeMessageType.h  Atoms.h  Client.h  CmdState.cpp  CmdState.h  Crc.cpp  Crc.h  Exchange.cpp  Exchange.h  FwtState.cpp  FwtState.h  GcCmd.h  GcInterface.cpp  GcInterface.h  GcStructs.h  GroundControl.cpp  GroundControl.h  MemIntervalSet.cpp  MemIntervalSet.h  Packet.h  ProjectUpdate.cpp  ProjectUpdate.h  Scheduler.h  TmFeatures.h  TmParamUpdate.h  TmState.cpp  TmState.h
src/decode/model/: CmdModel.cpp  CmdModel.h  CmdNode.cpp  CmdNode.h  CoderState.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  FieldsNode.cpp  FieldsNode.h  FindNode.cpp  FindNode.h  LockableNode.h  Model.cpp  Model.h  ModelEventHandler.cpp  ModelEventHandler.h  Node.cpp  Node.h  NodeView.cpp  NodeView.h  NodeViewStore.cpp  NodeViewStore.h  NodeViewUpdate.cpp  NodeViewUpdate.h  NodeViewUpdater.cpp  NodeViewUpdater.h  NodeWithNamedChildren.h  OnboardTime.cpp  OnboardTime.h  StatusDecoder.cpp  StatusDecoder.h  TmModel.cpp  TmModel.h  Value.cpp  Value.h  ValueInfoCache.cpp  ValueInfoCache.h  ValueKind.h  (+2 more)
src/decode/parser/: Ast.cpp  Ast.h  AstVisitor.h  Component.h  Constant.h  Containers.cpp  Containers.h  Decl.h  DeviceDesc.h  DocBlock.h  Field.h  FileInfo.h  Lexer.cpp  Lexer.h  Location.h  ModuleDesc.h  ModuleInfo.h  Package.cpp  Package.h  Parser.cpp  Parser.h  Project.cpp  Project.h  Span.h  StringSwitch.h  Token.h  Type.h
src/decode/ui/: FirmwareStatusWidget.cpp  FirmwareStatusWidget.h  FirmwareWidget.cpp  FirmwareWidget.h  QCmdModel.cpp  QCmdModel.h  QModel.cpp  QModel.h  QModelBase.cpp  QModelBase.h  QModelEventHandler.cpp  QModelEventHandler.h  QNodeModel.cpp  QNodeModel.h  QNodeViewModel.cpp  QNodeViewModel.h
tests/: CMakeLists.txt
